--- a/assets/index.html
+++ b/assets/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Maze Game Project - Portfolio">
+  <meta name="description" content="Explore the Maze Game Project - A showcase of creativity and coding skills">
   <link rel="stylesheet" href="styles.css">
   <title>Maze Game Project</title>
 </head>
@@ -13,7 +13,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="#intro">Home</a></li>
+        <li><a href="#home">Home</a></li>
         <li><a href="#features">Features</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#demo">Demo</a></li>
@@ -24,44 +24,56 @@
   <!-- Intro Section -->
   <section id="intro" class="intro-section">
     <div class="cover-image">
-      <img src="images/maze-cover.jpg" alt="Maze Game Cover Image">
+      <img src="images/maze-coverpic.png" alt="Maze"/>
     </div>
     <h1>Maze Game Project</h1>
     <p class="tagline">An immersive 3D maze experience using SDL and Raycasting.</p>
-    <a href="https://github.com/merlin254-X/portifolio-maze" class="btn">Play the Game</a>
+    <a href="https://youtu.be/k0LTaoZZsbA" class="btn">Play the Game</a>
   </section>
 
   <!-- Features Section -->
   <section id="features" class="feature-section">
     <h2>Key Features</h2>
     <div class="feature">
-      <img src="/images/mazenavigation.jpg" alt="Maze Navigation">
-      <h3>3D Maze Navigation</h3>
-      <p>Explore intricate mazes generated in real-time using a powerful raycasting engine.</p>
+      <h3>3D Raycasting Engine </h3>
+      <p>Utilizes a raycasting algorithm to simulate a first-person 3D view, 
+        enhancing immersion.</p>
     </div>
     <div class="feature">
-      <img src="images/obstacle.jpg" alt="Dynamic Obstacles">
-      <h3>Dynamic Obstacles</h3>
-      <p>Navigate through dynamic obstacles that challenge your maze-solving skills.</p>
+      <h3>Smooth Movement & Control </h3>
+      <p>Offers fluid player controls for walking and turning, 
+        providing a natural navigation experience.</p>
     </div>
     <div class="feature">
-      <img src="images/smoothperf.jpg" alt="Smooth Performance">
-      <h3>Optimized Performance</h3>
-      <p>Enjoy smooth rendering and frame rates optimized for a responsive gaming experience.</p>
+      <h3>Collision Detection</h3>
+      <p>Implements accurate wall collision detection, 
+        ensuring realistic interactions with the maze environment.</p>
     </div>
   </section>
 
   <!-- About Section -->
   <section id="about" class="about-section">
     <h2>About the Project</h2>
-    <p>This maze project was inspired by a desire to create a visually engaging game while learning advanced concepts like raycasting and 3D rendering. The development timeline spanned several weeks of work and study. It serves as a Holberton School Portfolio project.</p>
+    <p>This maze project was inspired by a desire to create a visually engaging game while learning advanced concepts like raycasting and 3D rendering. 
+      This maze project aims to create an engaging 3D game using raycasting and real-time rendering. 
+      It features player movement with collision detection, smooth controls for walking and rotating, and efficient rendering for optimal performance.
+       The focus is on delivering an immersive, fluid maze-solving experience. 
+      The development timeline spanned several weeks of work and study.
+       It serves as a Holberton School Portfolio project.</p>
     <p>Developed by Derick Marine.</p>
     <div class="social-links">
       <a href="https://github.com/merlin254-X">GitHub</a> |
       <a href="https://www.linkedin.com/in/derickmarine">LinkedIn</a> |
       <a href="https://x.com/DerickMarine">Twitter</a>
     </div>
-    <p>Check the repository: <a href="https://github.com/merlin254-X/maze-game">GitHub Repository</a></p>
+    <p>Check the repository: <a href="https://github.com/merlin254-X/The-maze">GitHub Repository</a></p>
+  </section>
+
+  <!-- About Deomo -->
+  <section id="demo" class="demo-section">
+    <h2>Maze-game demo</h2>
+    <p>Play the game to experience immersive 3D mazes</p>
+    <a href="https://youtu.be/k0LTaoZZsbA" class="btn">Play the Game</a>
   </section>
 
 </body>
